# moneylib

./: .gitignore  AGENTS.md  CODE_REVIEW.md  Cargo.toml  ISSUE_ACCOUNTING_OPERATIONS.md  LICENSE  Makefile  PROPOSED_OPERATIONS.md  README.md  REVIEW.md  comparisons.md
.github/workflows/: ci.yml
examples/: basic.rs
issues/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
src/: base.rs  calendar.rs  calendar_test.rs  currency.rs  currency_test.rs  dec_ops.rs  error.rs  error_test.rs  exchange.rs  exchange_test.rs  fmt.rs  fmt_test.rs  iter_ops.rs  iter_ops_test.rs  lib.rs  macros.rs  money.rs  money_2.rs  money_test.rs  money_test.rs.backup  multi_currency_test.rs  obj_money.rs  obj_money_test.rs  ops.rs  ops_test.rs  parse.rs  parse_test.rs  percent_ops.rs  percent_ops_test.rs  raw_money.rs  raw_money_ops.rs  raw_money_test.rs  split_alloc_ops.rs  split_alloc_ops_test.rs  temp_type_test.rs
src/accounting/: dividend.rs  dividend_test.rs  interest.rs  interest_test.rs  loan.rs  mod.rs
src/obj_money/: context.rs  dyn_money.rs  factory.rs  fmt.rs  mod.rs  money_impl.rs  obj_money.rs  obj_money_test.rs  ops.rs  raw_money_impl.rs
src/raw_money/: dec_ops.rs  mod.rs  money_ext.rs  ops.rs  raw_money.rs  raw_money_test.rs
src/serde/: base.rs  mod.rs  money.rs  money_test.rs  raw_money.rs  raw_money_test.rs
