[package]
name = "moneylib"
version = "0.3.0"
edition = "2024"
authors = ["Muhammad Fathir Irhas <fathir.irhas@gmail.com>"]
description = "Library to deal with money in Rust."
license = "MIT"
repository = "https://github.com/mfirhas/moneylib"
documentation = "https://docs.rs/moneylib"
keywords = ["finance", "money", "currency", "decimal", "type-safe"]
categories = ["finance", "data-structures"]

[features]
default = []
raw_money = []

[dependencies]
rust_decimal = { version = "1.40.0", default-features = false, features = ["maths", "macros"] }
currencylib = "0.1.0"

