[package]
name = "moneylib"
version = "0.5.0"
edition = "2024"
authors = ["Muhammad Fathir Irhas <fathir.irhas@gmail.com>"]
description = "Library to deal with money in Rust."
license = "MIT"
repository = "https://github.com/mfirhas/moneylib"
documentation = "https://docs.rs/moneylib"
keywords = ["finance", "money", "currency", "decimal", "type-safe"]
categories = ["finance", "data-structures"]

[features]
default = []
raw_money = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
rust_decimal = { version = "1.40.0", default-features = false, features = ["maths", "macros"] }
currencylib = "0.1.0"
serde = { version = "1.0", default-features = false, optional = true }
serde_json = { version = "1.0", features = ["arbitrary_precision"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

