[package]
name = "moneylib"
version = "0.12.0"
edition = "2024"
authors = ["Muhammad Fathir Irhas <fathir.irhas@gmail.com>"]
description = "Library to deal with money in Rust."
license = "MIT"
repository = "https://github.com/mfirhas/moneylib"
documentation = "https://docs.rs/moneylib"
keywords = ["finance", "money", "currency", "decimal", "type-safe"]
categories = ["finance", "data-structures"]
exclude = [
  "**/*_test.rs",
  "tests/**",
  "examples/**",
  "Makefile",
  "AGENTS.md",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
raw_money = []
serde = ["dep:serde", "dep:serde_json"]
locale = ["dep:icu_locale", "dep:icu_decimal"]
exchange = []
accounting = []

[dependencies]
rust_decimal = { version = "1.40.0", default-features = false, features = ["maths"] }
rust_decimal_macros = { version = "1.40.0", features = ["reexportable"] }
currencylib = "0.1.3"
serde = { version = "1.0", default-features = false, optional = true }
serde_json = { version = "1.0", features = ["arbitrary_precision"], optional = true }
icu_locale  = { version = "2.1.1", optional = true }
icu_decimal = { version = "2.1.1", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.0"

